crates/rsciter_macro/tests/compile_fail/generic_impl_test.rs
struct S;
#[rsciter_macro::xmod]
impl<T> S {
}

fn main() {}