crates/rsciter_macro/tests/compile_fail/generic_impl_test.stderr
error: #[rsciter::xmod] Generic impl blocks are not supported!
 --> tests/compile_fail/generic_impl_test.rs:3:5
  |
3 | impl<T> S {
  |     ^
